# midiraja

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.linux  LICENSE  NOTICES.md  README.md  TODO.md  apple2_440hz.raw  build.gradle  install.ps1  install.sh  raw_440hz.raw  settings.gradle
.github/workflows/: build.yml  pre-release.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/advcontrols_20260223/: plan.md  spec.md
conductor/archive/linux_alsa_support_20260223/: plan.md
conductor/archive/portselect_20260223/: index.md  metadata.json
conductor/archive/setupcicd_20260223/: spec.md
conductor/archive/ui_ioc_events_20260225/: index.md  spec.md
config/: eclipse-formatter.xml
config/checkstyle/: checkstyle.xml  suppressions.xml
config/pmd/: ruleset.xml
docs/: additional-format-engineering.md  beep-1bit-audio-engineering.md  build-and-release.md  dsp-pipeline-engineering.md  electric-sixteentet-engineering.md  engineering.md  libvgm_integration.md  mac128k-audio-engineering.md  mt32_integration.md  native-bridge-engineering.md  native-library-distribution.md  opm-bank-v5-implementation.md  opm-optimizer-evolution.md  opm-patch-optimizer.md  opmgm-bank-format.md  psg-tracker-engineering.md  quickstart.md  realsound-pwm-engineering.md  retro-audio-engineering.md  soft-synth-guide.md  tracker-format-engineering.md  tui-engineering.md  user_guide.md  vgm-architecture.md  vgm_playback.md  vgm_to_midi_conversion.md
docs/eawpats/: install.txt  timidity.cfg  ultrasnd.ini
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
homebrew/: midra.rb
man/: midra.1
scoop/: midra.json
scripts/: analyze_compress_effect.py  analyze_psg_behavior.py  analyze_scc_volume.py  analyze_scc_volume2.py  build-leyden-dist.sh  build-native-libs.sh  check_opm_bank.py  compare_freq.py  compare_vgm_chips.py  decode_drums.py  docker-build-x86.sh  docker-build.sh  extract_drum_samples.py  fix_bank_levels.py  gen_opm_bank_v4.py  gen_opm_bank_v5.py  import_x16_opm_bank.py  linux-build.sh  measure_instrument_levels.py  opm_render.py  package-release.sh  run.sh  simulate_apple2.py
src/main/c/libvgm/: CMakeLists.txt  vgm_bridge.cpp
src/main/man/: midra.1
(+638 files in other folders)
